fixed: background overflow issue

--- a/src/app/components/home-banner/home-banner.component.scss
+++ b/src/app/components/home-banner/home-banner.component.scss
@@ -30,5 +30,5 @@ p{
     letter-spacing: 0.3px;
     position: relative;
     bottom: 1.4rem;
-    color: var(--green);
+    
 }
