--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import './styles/typography.scss';
 @import './styles/colors.scss';
+
+body, html{
+    margin: 0;
+    padding: 0;
+}
